# mandelbrot-set-bmp

./: README.md
src/: CMakeLists.txt  main.c  mandelbrot.asm
